# F-Workonyx

./: .deepsource.toml  .dockerignore  .gitignore  .gitmodules  Cargo.toml  Makefile  README.md
.cargo/: config.toml
.github/workflows/: release.yaml
deployment/: Dockerfile
onyx/: Cargo.toml
onyx/config/components/crop_bed/actuating/lighting/: crop_bed_lighting.yaml
onyx/config/components/crop_bed/actuating/power/: crop_bed_power_0_no_map.yaml  crop_bed_power_1.yaml  crop_bed_power_1_no_map.yaml  crop_bed_power_2.yaml  crop_bed_power_2_no_map.yaml
onyx/config/components/crop_bed/sensing/camera_array/: crop_bed_array_test.yaml  crop_bed_camera_array_0.yaml  crop_bed_camera_array_1.yaml  crop_bed_camera_array_2.yaml
onyx/config/devices/crop_bed/: camera_0.yaml  camera_1.yaml  camera_2.yaml  camera_3.yaml  camera_4.yaml  camera_5.yaml  pdm_0.yaml  pdm_1.yaml  pdm_utilities.yaml
onyx/src/: components.rs  devices.rs  lib.rs  messages.rs  utils.rs
onyx/src/components/crop_bed/actuating/: lighting.rs  power.rs
onyx/src/components/crop_bed/sensing/: camera_array.rs
onyx/src/devices/hardware/: camera.rs  pdm.rs
onyx/src/messages/control/: light.rs  weed.rs
onyx/src/utils/: image.rs  tests.rs
systems/crop_bed/image_capture/: Cargo.toml
systems/crop_bed/image_capture/src/: main.rs
systems/crop_bed/lighting/: Cargo.toml
systems/crop_bed/lighting/src/: main.rs
systems/crop_bed/spray/: Cargo.toml
systems/crop_bed/spray/src/: main.rs
systems/utilities/speed_measurement/: Cargo.toml
systems/utilities/speed_measurement/src/: main.rs
